--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HOST=http://108.160.137.173/
+HOST=108.160.137.173
 PORT=1337
 APP_KEYS=4/3fVMT3Kbeodm8f2eopEQ==,g/IGaGMYC6JH+4wLfxsCAA==,r4ea/BrGjG0p9jsneuPhIQ==,gquuCaU9lsgKenE0lqLCMw==
 API_TOKEN_SALT=FOoqgJ7gSz13ARxJrt9y/Q==
